site under development

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,4 +11,5 @@
       </a>
     {{ end }}
   </section>
+<blockquote>⚠️ <u>THIS <b>SITE</b> IS <b>UNDER DEVELOPMENT</b></u> ⚠️</blockquote>
 </footer>
