removed padding-left

--- a/assets/css/shortcodes/shimmer.scss
+++ b/assets/css/shortcodes/shimmer.scss
@@ -34,7 +34,7 @@
 	--shimer-coco: currentColor;
 	perspective: 80px;
 	transform-style: preserve-3d;
-	padding-left: .3rem;
+	// padding-left: .3rem;
 
 	// span{
 	span.word span{
