--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -3,7 +3,7 @@ Makes the text looks like it is handwritten animated.
 
 Arguments:
 text = (string) Text with the glitch effect
-time = (float) The total time for the animation. Default: 5
+frame_time = (float) The total time for the animation. Default: 0.5
 font = (int (0,1,2, 3)) 1 = Terminal font, 2 = Pixel art font, 3 = Handwritten font. Default: 0 (do not change the original font)
 spacing = (float) Space between letters. Default: nil (inherited value)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
