--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -5,6 +5,7 @@ $soft_color: change-color($main_color, $saturation: 60%, $lightness: 40%);
 
 // @import "preload.scss";
 @import "fonts.scss";
+// @import "backgrounds.scss";
 @import "utility-classes.scss";
 @import "shortcodes.scss";
 @import "effects.scss";
@@ -2510,3 +2511,82 @@ video{
 	// box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 	box-shadow: rgba(0, 0, 0, 0.19) 0px 6px 20px, rgba(0, 0, 0, 0.73) 0px 3px 6px;
 }
+
+
+// // html, body {
+// // 	margin: 0;
+// // 	padding: 0;
+// // 	height: 100%; /* ensure both html and body are full height */
+// // 	position: relative;
+// //   }
+
+// body::before{
+// 	content: "";
+// 	// position: fixed; /* or absolute */
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	bottom: 0;
+// 	width: 100%;
+// 	height: 100%;
+// 	z-index: -1; /* Put it behind the body content */
+// 	// background-image: url("/images/background/milky.png");
+// 	background-size: cover;
+// 	// background-color: rgba(255,255,255, 0.1);
+// 	background-blend-mode: color-burn;
+// 	background-repeat: repeat;
+
+// 	// background-image: url("/images/background/milky.png");
+// 	// background-position: top left;
+// }
+
+// // body{
+// // 	// position: fixed; /* or absolute */
+// // 	// position: absolute;
+// // 	// top: 0;
+// // 	// left: 0;
+// // 	// bottom: 0;
+// // 	// width: 100%;
+// // 	// height: 100%;
+// // 	// z-index: -1; /* Put it behind the body content */
+// // 	// background-image: url("/images/background/milky.png");
+// // 	background-image: url("/images/background/marble.png");
+// // 	background-size: cover;
+
+// // 	// background-blend-mode: multiply;
+// // 	// background-repeat: repeat;
+
+// // 	// background-image: url("/images/background/milky.png");
+// // 	// background-repeat: repeat; /* THIS makes it tile */
+// // 	// background-size: cover;     /* Keep original image size */
+// // 	// background-position: top left;
+// // }
+
+// // .dark body{
+// // 	$c: 0;
+// // 	// $c: 255;
+// // 	$alpha: 0.01;
+// // 	// $alpha: 0.1;
+// // 	background-color: rgba($c,$c,$c, $alpha);
+// // 	// background-blend-mode: color-burn;
+// // 	// background-blend-mode: color-dodge;
+// // 	// background-blend-mode: hue;
+// // 	background-blend-mode: lighten;
+// // 	backdrop-filter: blur(5px);
+// // }
+
+// // .light body{
+// // 	$c: 0;
+// // 	$alpha: 0.1;
+// // 	background-color: rgba($c,$c,$c, $alpha);
+// // 	background-blend-mode: lighten;
+// // }
+
+// .dark body{
+// 	// background-image: linear-gradient(12deg, rgba(193, 193, 193,0.05) 0%, rgba(193, 193, 193,0.05) 2%,rgba(129, 129, 129,0.05) 2%, rgba(129, 129, 129,0.05) 27%,rgba(185, 185, 185,0.05) 27%, rgba(185, 185, 185,0.05) 66%,rgba(83, 83, 83,0.05) 66%, rgba(83, 83, 83,0.05) 100%),linear-gradient(321deg, rgba(240, 240, 240,0.05) 0%, rgba(240, 240, 240,0.05) 13%,rgba(231, 231, 231,0.05) 13%, rgba(231, 231, 231,0.05) 34%,rgba(139, 139, 139,0.05) 34%, rgba(139, 139, 139,0.05) 71%,rgba(112, 112, 112,0.05) 71%, rgba(112, 112, 112,0.05) 100%),linear-gradient(236deg, rgba(189, 189, 189,0.05) 0%, rgba(189, 189, 189,0.05) 47%,rgba(138, 138, 138,0.05) 47%, rgba(138, 138, 138,0.05) 58%,rgba(108, 108, 108,0.05) 58%, rgba(108, 108, 108,0.05) 85%,rgba(143, 143, 143,0.05) 85%, rgba(143, 143, 143,0.05) 100%),linear-gradient(96deg, rgba(53, 53, 53,0.05) 0%, rgba(53, 53, 53,0.05) 53%,rgba(44, 44, 44,0.05) 53%, rgba(44, 44, 44,0.05) 82%,rgba(77, 77, 77,0.05) 82%, rgba(77, 77, 77,0.05) 98%,rgba(8, 8, 8,0.05) 98%, rgba(8, 8, 8,0.05) 100%),linear-gradient(334deg, hsl(247,0%,2%),hsl(247,0%,2%));
+// 	background-image: radial-gradient(circle at center center, transparent,rgb(33,33,33)),repeating-linear-gradient(135deg, rgb(33,33,33) 0px, rgb(33,33,33) 2px,transparent 2px, transparent 10px,rgb(33,33,33) 10px, rgb(33,33,33) 11px,transparent 11px, transparent 21px),repeating-linear-gradient(45deg, rgb(47,47,47) 0px, rgb(47,47,47) 4px,transparent 4px, transparent 8px),linear-gradient(90deg, rgb(33,33,33),rgb(33,33,33));
+// }
+
+// .light body{
+// 	background-image: linear-gradient(16deg, rgba(116, 116, 116,0.02) 0%, rgba(116, 116, 116,0.02) 25%,transparent 25%, transparent 96%,rgba(177, 177, 177,0.02) 96%, rgba(177, 177, 177,0.02) 100%),linear-gradient(236deg, rgba(148, 148, 148,0.02) 0%, rgba(148, 148, 148,0.02) 53%,transparent 53%, transparent 59%,rgba(56, 56, 56,0.02) 59%, rgba(56, 56, 56,0.02) 100%),linear-gradient(284deg, rgba(16, 16, 16,0.02) 0%, rgba(16, 16, 16,0.02) 46%,transparent 46%, transparent 71%,rgba(181, 181, 181,0.02) 71%, rgba(181, 181, 181,0.02) 100%),linear-gradient(316deg, rgba(197, 197, 197,0.02) 0%, rgba(197, 197, 197,0.02) 26%,transparent 26%, transparent 49%,rgba(58, 58, 58,0.02) 49%, rgba(58, 58, 58,0.02) 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+// }
