refactor default_articles_profile_description

--- a/layouts/partials/articles-right-bar.html
+++ b/layouts/partials/articles-right-bar.html
@@ -25,7 +25,7 @@
 		
 		{{/*  <h2>Patrick</h2>  */}}
 		{{/*  <p>{{ T "articleAboutMeDescription" }}</p>  */}}
-		{{ with $about_page.Params.articles_description }}
+		{{ with $about_page.Params.default_articles_profile_description }}
 			<p>{{ . }}</p>
 		{{ end }}
 	</a>
