--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -29,7 +29,9 @@
   {{ end -}}
   {{ partial "opengraph.html" . }}
   {{ $css := resources.Get "/css/main.scss" | toCSS | minify | fingerprint }}
-  <link rel="stylesheet" href="{{ $css.RelPermalink }}" />
+  {{- /*  FIXME alcachofa  */ -}}
+  {{- /*  <link rel="stylesheet" href="{{ $css.RelPermalink }}" />  */ -}}
+  <link rel="stylesheet" href="{{ $css.Permalink }}" />
   {{ $params := dict
     "closeTitle" (i18n "closeTitle")
     "zoomTitle" (i18n "zoomTitle")
