--- a/layouts/shortcodes/img_caption.html
+++ b/layouts/shortcodes/img_caption.html
@@ -10,8 +10,12 @@ page = (string) Page to open when clicking the image. Default: ""
 italic = (bool) If true, caption will be in italics. Default: true
 class = (string) Class (or classes) for the <img> element. Tip: use the class 'no-box-shadow' if you want the img to NOT have the shadow around it.
 style = (string) CSS style for the <figure> element. Default: ""
+resize = (string) Resizes the image. See https://gohugo.io/content-management/image-processing/#resize 
 Usage:
 {{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" >}}
+With resize
+{{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" resize="300x" >}}
+{{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" resize="x400" >}}
 */ -}}
 
 {{- $img_path := or (.Get "img") (.Get 0) -}}
@@ -22,14 +26,15 @@ Usage:
 {{- $italic := (.Get "italic") | default true -}}
 {{- $element_style := (.Get "style") | default "" -}}
 {{- $img_class := (.Get "class") -}}
+{{- $resize := (.Get "resize") -}}
 
 {{- $a_link := $url }}
 {{- if $page_name -}}
-	{{- $page := $.Site.GetPage $page_name -}}
-	{{- if not $page -}}
-		{{- errorf "img_caption: Page '%s' not found (in '%s')" $page_name .Page.File.Path -}}
-	{{- end -}}
-	{{- $a_link = $page.RelPermalink }}
+    {{- $page := $.Site.GetPage $page_name -}}
+    {{- if not $page -}}
+        {{- errorf "img_caption: Page '%s' not found (in '%s')" $page_name .Page.File.Path -}}
+    {{- end -}}
+    {{- $a_link = $page.RelPermalink }}
 {{- end -}}
 
 {{- if not $alt_text -}}
@@ -46,24 +51,31 @@ Usage:
 {{- /*  TODO meter esto en un partial utils/?  */ -}}
   {{- $image_resource = or (.Page.Resources.Get $img_path) (resources.Get $img_path) (.Page.Resources.GetMatch (printf "**%s**" $img_path )) -}}
   {{- if $image_resource -}}
+    {{- if $resize -}}
+        {{- /*  {{- $resize_parameter := printf "resize %s" $resize -}}  */ -}}
+        {{- /*  {{- $image_resource = $image_resource.Process $resize_parameter -}}  */ -}}
+        {{- $image_resource = $image_resource.Resize $resize -}}
+    {{- end -}}
+    {{- /*  {{- $image_resource = $image_resource.Resize $resize -}}  */ -}}
+
     {{- $img_url = $image_resource.RelPermalink -}}
   {{- end -}}
 {{- end -}}
 
 {{- $tag := "span" | safeHTMLAttr -}}
 {{- if $italic -}}
-	{{- $tag = "em" | safeHTMLAttr -}}
+    {{- $tag = "em" | safeHTMLAttr -}}
 {{- end -}}
 <figure class="figure-caption" {{- with $element_style}} style="{{. | safeCSS}}"{{end}}>
-	{{- if $a_link -}}<a class="img-link" target="_blank" rel="noopener noreferrer" href="{{$a_link}}">{{- end -}}
-	{{- /*  <img {{ with $img_class }} class="{{.}}"{{- end -}} src="{{- $img_url -}}" loading="lazy" width="{{$image_resource.Width}}" height="{{$image_resource.Height}}" alt="{{$alt_text}}">  */ -}}
-	<img {{ with $img_class }} class="{{.}}"{{- end -}} src="{{- $img_url -}}" loading="lazy" {{with $image_resource}}width="{{.Width}}" height="{{.Height}}"{{end}} alt="{{$alt_text}}">
-	{{- /*  <img src="{{- $img_url -}}" loading="lazy" {{- partial "utils/img-attributes-from-resource.html" (dict "page" .Page "img_path" $img_path) }} alt="{{$alt_text}}">  */ -}}
-	{{- /*  <{{ $tag }} style="opacity: .6;">{{- $caption -}}</{{ $tag }}>  */ -}}
-	{{- if $caption -}}
-		{{- /*  {{- $html := printf "<figcaption><%s style='opacity:.6;'>%s</%s></figcaption>" $tag ($caption | markdownify) $tag -}}  */ -}}
-		{{- $html := printf "<figcaption><%s>%s</%s></figcaption>" $tag ($caption | markdownify) $tag -}}
-		{{- $html | safeHTML -}}
-	{{- end -}}
-	{{- if $a_link -}}</a>{{- end -}}
+    {{- if $a_link -}}<a class="img-link" target="_blank" rel="noopener noreferrer" href="{{$a_link}}">{{- end -}}
+    {{- /*  <img {{ with $img_class }} class="{{.}}"{{- end -}} src="{{- $img_url -}}" loading="lazy" width="{{$image_resource.Width}}" height="{{$image_resource.Height}}" alt="{{$alt_text}}">  */ -}}
+    <img {{ with $img_class }} class="{{.}}"{{- end -}} src="{{- $img_url -}}" loading="lazy" {{with $image_resource}}width="{{.Width}}" height="{{.Height}}"{{end}} alt="{{$alt_text}}">
+    {{- /*  <img src="{{- $img_url -}}" loading="lazy" {{- partial "utils/img-attributes-from-resource.html" (dict "page" .Page "img_path" $img_path) }} alt="{{$alt_text}}">  */ -}}
+    {{- /*  <{{ $tag }} style="opacity: .6;">{{- $caption -}}</{{ $tag }}>  */ -}}
+    {{- if $caption -}}
+        {{- /*  {{- $html := printf "<figcaption><%s style='opacity:.6;'>%s</%s></figcaption>" $tag ($caption | markdownify) $tag -}}  */ -}}
+        {{- $html := printf "<figcaption><%s>%s</%s></figcaption>" $tag ($caption | markdownify) $tag -}}
+        {{- $html | safeHTML -}}
+    {{- end -}}
+    {{- if $a_link -}}</a>{{- end -}}
 </figure>
