--- a/layouts/shortcodes/img_caption.html
+++ b/layouts/shortcodes/img_caption.html
@@ -11,9 +11,10 @@ italic = (bool) If true, caption will be in italics. Default: true
 class = (string) Class (or classes) for the <img> element. Tip: use the class 'no-box-shadow' if you want the img to NOT have the shadow around it.
 style = (string) CSS style for the <figure> element. Default: ""
 resize = (string) Resizes the image. See https://gohugo.io/content-management/image-processing/#resize 
+
 Usage:
 {{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" >}}
-With resize
+With resize:
 {{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" resize="300x" >}}
 {{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" resize="x400" >}}
 */ -}}
