--- a/assets/css/shortcodes/details.scss
+++ b/assets/css/shortcodes/details.scss
@@ -108,6 +108,11 @@ details {
 	article{
 		padding: 10px;
 		padding-left: 20px;
+		p{
+			// line-height: 10rem;
+			margin-top: 10px;
+			margin-bottom: 20px;
+		}
 
 		nav.TableOfContents{
 			font-weight: bold;
