--- a/layouts/shortcodes/video.html
+++ b/layouts/shortcodes/video.html
@@ -19,18 +19,7 @@ Example:
 {{- $resize := (.Get "resize") -}}
 
 
-{{- $video_url := $_video_url -}}
-{{- $video_resource := "" -}}
-{{- /*  Get the image resource if the _video_url is not a link  */ -}}
-{{- if not (hasPrefix $_video_url "http") -}}
-{{- /*  TODO meter esto en un partial utils/?  */ -}}
-  {{- $video_resource = or (.Page.Resources.Get $_video_url) (resources.Get $_video_url) (.Page.Resources.GetMatch (printf "**%s**" $_video_url )) -}}
-  {{- if $video_resource -}}
-    {{- $video_url = $video_resource.RelPermalink -}}
-  {{- end -}}
-{{- end -}}
-
-
+{{- $video_url := partial "utils/get-resource-url.html" (dict "context" . "url" $_video_url) -}}
 
 {{ $autoplay := "" }}
 {{ if $autoplay_flag }}
