--- a/layouts/partials/utils/get-resource-url.html
+++ b/layouts/partials/utils/get-resource-url.html
@@ -8,7 +8,7 @@ Basically allows to:
 
 
 Use:
-{{- $irñ := partial "utils/get-resource-url.html" (dict "context" . "url" $url) -}}
+{{- $url := partial "utils/get-resource-url.html" (dict "context" . "url" $url) -}}
 */}}
 {{- $url := .url -}}
 {{- $context := .context -}}
