article-header-active

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -594,6 +594,9 @@ article.articles-content{
 
 
 // ARTICLES INDEX
+.article-header-active{
+	color: var(--hover-color);
+}
 
 .articles-index {
 	a{
