padding-bottom in link cards set to 0

--- a/assets/css/shortcodes/link_cards.scss
+++ b/assets/css/shortcodes/link_cards.scss
@@ -23,6 +23,7 @@ figure.link-card{
 	height: 100px;
 	display: flex;
 	// padding: 20px;
+	padding-bottom: 0px;
 	margin: 20px;
 		overflow: hidden;
 		// box-shadow: rgba(0, 0, 0, 0.75) 0px 5px 15px;
