fix: urlize (for tags with spaces)

--- a/layouts/partials/articles-title.html
+++ b/layouts/partials/articles-title.html
@@ -70,7 +70,7 @@
               {{/*  <a href="{{ $tag.RelPermalink }}">{{- $tag -}}</a>  */}}
               {{/*  <a class="article-tag">{{- $tag -}}</a>  */}}
               {{/*  <a class="article-tag" href="/tags/{{$tag}}">{{- $tag -}}</a>  */}}
-              <a class="article-tag" href="{{absLangURL "tags/"}}{{$tag}}">{{- $tag -}}</a>
+              <a class="article-tag" href="{{absLangURL "tags/"}}{{$tag | urlize }}">{{- $tag -}}</a>
               {{/*  {{- if ne $index $lastIndex -}}
               ,
               {{- else -}}
