--- a/layouts/partials/articles/get-article-pfp.html
+++ b/layouts/partials/articles/get-article-pfp.html
@@ -2,7 +2,9 @@
 {{- $article_custom_pfp := "" -}}
 
 {{- with .Page.Params.custom_pfp -}}
-	{{- $article_custom_pfp = $.Page.Resources.Get . -}}
+	{{- /*  {{- $article_custom_pfp = or ($.Page.Resources.Get .) (resources.GetMatch . ) -}}  */ -}}
+	{{- /*  {{- $article_custom_pfp = or (resources.GetMatch . ) ($.Page.Resources.Get .) -}}  */ -}}
+	{{- $article_custom_pfp = or (resources.GetMatch (printf "**/*%s*" .) ) ($.Page.Resources.Get .) -}}
 	{{- if not $article_custom_pfp -}}
 		{{- errorf "custom_pfp: '%s' not found at '%s' (%s)" . $.Title $.File.Path -}}
 	{{- end -}}
@@ -21,7 +23,8 @@
 
 {{- $pfp_resource := $pfp_resource_image -}}
 {{- if and (ne $pfp_resource_image.MediaType.SubType "gif") (ne $pfp_resource_image.MediaType.SubType "webp") -}}
-	{{- $pfp_resource = $pfp_resource_image.Filter (images.Process "fit 250x250") -}}
+	{{- /*  {{- $pfp_resource = $pfp_resource_image.Filter (images.Process "fit 250x250") -}}  */ -}}
+	{{- $pfp_resource = $pfp_resource_image.Filter (images.Process "resize 250x250") -}}
 {{- end -}}
 
 {{- return $pfp_resource -}}
