profile-pictures/ folder

--- a/layouts/partials/articles-right-bar.html
+++ b/layouts/partials/articles-right-bar.html
@@ -15,7 +15,7 @@
 		{{/*  <h3>{{ T "articleAboutMe" | title}}</h3>  */}}
 		{{/*  <img href="">  */}}
 		{{/*  <img id="szk_pfp" src="{{ .Params.profile_picture }}">  */}}
-		{{/*  <img id="szk_pfp" src="/images/yo.jpg">  */}}
+		{{/*  <img id="szk_pfp" src="/images/profile-pictures/yo.jpg">  */}}
 		{{- /*  <img id="articles-pfp" src="{{.Site.Params.articles_pfp_image}}">  */ -}}
 		
 		{{- /*  {{- $pfp_resource := .Site.Resources.Get .Site.Params.articles_pfp_image -}}  */ -}}
@@ -29,7 +29,7 @@
 			<p>{{ . | markdownify }}</p>
 		{{ end }}
 	</a>
-	{{/*  <img src="/images/yo.jpg">  */}}
+	{{/*  <img src="/images/profile-pictures/yo.jpg">  */}}
 	{{/*  </hgroup>  */}}
 	{{/*  <div class="flexi">  */}}
 		{{partial "social-icons.html" .}}
