--- a/layouts/articles/list.html
+++ b/layouts/articles/list.html
@@ -15,7 +15,7 @@
 
     {{ end }}
   </section>
-  <hr>
+  <hr class="full-separator">
   <hgroup>
     {{ .Content | markdownify }}
     {{/*  {{ .Content }}  */}}
