--- a/layouts/shortcodes/quote.html
+++ b/layouts/shortcodes/quote.html
@@ -4,17 +4,20 @@ Quote with author added with <cite></cite>
 Arguments:
 text = (string) Text with the quote
 author/by = (string) The author of the quote
+class = (string) CSS class(es).
 
 {{< quote "Learn from the past, live for today, hope for the future" "Einstein" >}}
 {{< quote text="Learn from the past, live for today, hope for the future" author="Einstein" >}}
 {{< quote text="Learn from the past, live for today, hope for the future" by="Einstein" >}}
+{{< quote text="Learn from the past, <br>live for today, <br>hope for the future" by="Einstein" class="text-align-center" >}}
 */ -}}
 
 {{- $text := or (.Get "text") (.Get "quote")  (.Get 0) -}}
 {{- $author := or (.Get "author") (.Get "by") (.Get 1) | default "" -}}
+{{- $class := or (.Get "class") (.Get "style") (.Get 2) | default "" -}}
 
 <blockquote>
-<p>{{$text | markdownify }}</p>
+<p {{with $class}}class='{{.}}'{{end}}>{{$text | markdownify }}</p>
 {{- if $author -}}
 	<cite>{{$author}}</cite>
 {{- end -}}
