pixel-art class for pixel art image-rendering

--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -4,6 +4,11 @@
 	box-shadow: #{$x} #{$y} #{$blur} #{$spread} #{$color} !important;
 }
 
+.pixel-art{
+	image-rendering: pixelated;
+  	image-rendering: crisp-edges; /* fallback for some browsers */
+}
+
 .no-display{
 	display: none;
 }
