--- a/layouts/shortcodes/video.html
+++ b/layouts/shortcodes/video.html
@@ -3,19 +3,35 @@
 Embeds a local video
 
 Arguments:
-url = (string) local path to the video
-autoplay = (bool) Animation time. Default: 2.4 (s)
-muted = (bool) Offset on which the animation starts (useful for making asynchronous effects). Default: 0.0 (s)
+url/video/v/path = (string) local path to the video
+autoplay/auto = (bool) Autoplays the video (muted). Default: false
+controls/c = (bool) Shows controls of the video. Default: true
+loop/l = (bool) Loops the video. Default: false
+muted/m = (bool) Mute the video. Default: false
+class/cls = (string) Custom css class.
+css = (string) Custom css code.
+
+
+NOTE: Html do NOT allow to autoplay videos not muted.
 
 Example:
-{{< video url="my_video.mp4" autoplay=true mute=true>}} -> Autoplays muted
-{{< video "my_video.mp4" true true>}} -> Autoplays muted
+{{< video url="my_video.mp4" autoplay=true mute=true >}} -> Autoplays muted
+{{< video "my_video.mp4" true true >}} -> Autoplays muted
+{{< video v="my_video.mp4" auto=true css="height:100vh" class="pixel-art" >}} -> Makes the video to occupy 100% of the viewport's height and sets the class to pixel art (for pixel perfect (no interpolation filter))
+{{< video v="my_video.mp4" auto=true css="width:100vw" >}} -> Makes the video to occupy 100% of the viewport's width
 */}}
 
-{{ $_video_url := (or (.Get 0) (.Get "url") (.Get "video") (.Get "path")) }}
+{{ $_video_url := (or (.Get 0) (.Get "url") (.Get "video") (.Get "v") (.Get "path")) }}
 {{/*  {{ $controls := .Get 1 | default true }}  */}}
-{{ $autoplay_flag := (or (.Get 1) (.Get "autoplay")) | default false }}
-{{ $muted_flag := (or (.Get 2) (.Get "muted")) | default false }}
+{{ $autoplay_flag := (or (.Get 1) (.Get "autoplay") (.Get "auto")) | default false }}
+{{- /*  {{ $controls_flag := (or (.Get 2) (.Get "controls") (.Get "c")) | default true }}  */ -}}
+{{- /*  {{ $controls_flag := (or (.Get 2) (.Get "controls") (.Get "c")) | default "yes"}}  */ -}}
+{{ $controlsParam := or (.Get 2) (.Get "controls") (.Get "c") }}
+{{ $controls_flag := cond (eq $controlsParam false) false true }}
+
+{{ $loop_flag := (or (.Get 3) (.Get "loop") (.Get "l")) | default false }}
+{{ $muted_flag := (or (.Get 4) (.Get "muted") (.Get "m")) | default false }}
+{{ $css_class := (or (.Get "class") (.Get "cls")) | default false }}
 {{- $css := (.Get "css") -}}
 
 
@@ -31,6 +47,16 @@ Example:
 	{{ $muted = "muted" }}
 {{ end}}
 
-<video controls {{ $autoplay | safeHTMLAttr  }} {{ $muted | safeHTMLAttr  }} {{with $css}} style='{{$css | safeCSS}}'{{end}}>
+{{- /*  <video {{with $css_class}} class='{{.}}'{{end}} {{with $controls_flag}} controls {{end}} {{ $autoplay | safeHTMLAttr  }} {{ $muted | safeHTMLAttr  }} {{with $loop_flag}} loop {{end}} {{with $css}} style='{{$css | safeCSS}}'{{end}}>  */ -}}
+{{- /*  <video {{with $css_class}} class='{{.}}'{{end}} {{with $controls_flag}} controls {{end}} {{with $autoplay_flag}} autoplay|safeHTML {{end}} {{ $muted | safeHTMLAttr  }} {{with $loop_flag}} loop {{end}} {{with $css}} style='{{$css | safeCSS}}'{{end}}>  */ -}}
+	
+
+<video {{with $css_class}} 
+class='{{.}}'{{end}} 
+{{with $controls_flag}} controls {{end}} 
+{{with $autoplay_flag}} autoplay='' muted='' {{end}} 
+{{ $muted | safeHTMLAttr  }} 
+{{with $loop_flag}} loop {{end}} 
+{{with $css}} style='{{$css | safeCSS}}'{{end}}>
 	<source src="{{ $video_url }}" type="video/mp4">
 </video>
