--- a/layouts/shortcodes/text_wavy2.html
+++ b/layouts/shortcodes/text_wavy2.html
@@ -15,7 +15,7 @@ Usage:
 */ -}}
 {{- /*  REFACTOR text_wavy  */ -}}
 
-{{- $text_input := or (.Get "text") (.Get 0) -}}
+{{- $text_input := or (.Get "text") (.Get "t") (.Get 0) -}}
 {{- $chars := split $text_input "" -}}
 
 {{- $total_chars := len $chars -}}
