--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -35,6 +35,17 @@
 	color: var(--hover-color);
 }
 
+// INFO https://stackoverflow.com/questions/12906789/preventing-an-image-from-being-draggable-or-selectable-without-using-js
+.unselectable {
+	pointer-events: none;
+  user-drag: none; 
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 .underline{
 	text-decoration: underline;
 }
