--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -80,6 +80,7 @@
 {{ end }}
 
 <hr>
+<pre> Keywords: {{ .Keywords }}</pre>
 <pre>len Related: {{ len (site.RegularPages.Related . ) }}</pre>
 
 </details>
