--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -26,6 +26,18 @@
       {{ with .Content }}
         <article class="articles-content">
           {{ partial "articles-title.html" $context }}
+
+          {{- /*  Table of content for small screens  */ -}}
+          {{- /*  32 is the lenght of the empty html <nav> code when the table of content is empty   */ -}}
+          {{ if ne (len $.TableOfContents) 32 }}
+            <details class="articles-index-phone">
+                <summary>{{ T "articleIndexContent" }}</summary>
+                <article>
+                  {{ $.TableOfContents }}
+                </article>
+            </details>
+          {{ end }}
+
           {{/*  <section class="articles-content">  */}}
             {{/*  <section class="prose">  */}}
               {{ . }}
